idaho state shields added

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -2771,6 +2771,44 @@ layers:
                             mapzen_icon_library:
                                 size: [[6,[31px,20px]],[13,[33px,21px]],[15,[35px,22px]]]
 
+                US-ID:
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:ID$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
+                            #priority: 48
+                            text:
+                                offset: [3px, -3px]
+                    width_1char:
+                        filter: function() { return (feature.shield_text.length === 1) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[18px,18px]],[13,[19px,19px]],[15,[20                  px,20px]]]
+                    width_2char:
+                        filter: function() { return (feature.shield_text.length === 2) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[22px,18px]],[13,[23px,19px]],[15,[24px,20px]]]
+                    width_3char:
+                        filter: function() { return (feature.shield_text.length === 3) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[26px,18px]],[13,[27px,19px]],[15,[28px,20px]]]
+                    width_4char:
+                        filter: function() { return (feature.shield_text.length === 4) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[30px,18px]],[13,[31px,19px]],[15,[32px,20px]]]
+                    width_5char:
+                        filter: function() { return (feature.shield_text.length === 5) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[33px,18px]],[13,[34px,19px]],[15,[35px,20px]]]
+
                 US-NY:
                     # Match New York state highways: `US:NY`
                     filter: |
@@ -2971,7 +3009,6 @@ layers:
                                 /^US:DC$/.test(feature.network) ||
                                 /^US:FSH$/.test(feature.network) ||
                                 /^US:FSR$/.test(feature.network) ||
-                                /^US:ID$/.test(feature.network) ||
                                 /^US:KS$/.test(feature.network) ||
                                 /^US:LA$/.test(feature.network) ||
                                 /^US:MA$/.test(feature.network) ||
