maine shield offset, michigan shield sizing

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -2885,6 +2885,57 @@ layers:
                             mapzen_icon_library:
                                 size: [[6,[32px,21px]],[13,[35px,23px]],[15,[37px,24px]]]
 
+                US-MD:
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:MD$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
+                            #priority: 48
+                            text:
+                                offset: [0px, 1px]
+
+                US-MI:
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:MI$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
+                            #priority: 48
+                            text:
+                                offset: [0px, 0px]
+                    width_1char:
+                        filter: function() { return (feature.shield_text.length === 1) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[19px,19px]],[13,[20px,20px]],[15,[23px,23px]]]
+                    width_2char:
+                        filter: function() { return (feature.shield_text.length === 2) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[23px,19px]],[13,[25px,20px]],[15,[27px,23px]]]
+                    width_3char:
+                        filter: function() { return (feature.shield_text.length === 3) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[29px,19px]],[13,[30px,20px]],[15,[33px,23px]]]
+                    width_4char:
+                        filter: function() { return (feature.shield_text.length === 4) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[32px,20px]],[13,[34px,21px]],[15,[36px,23px]]]
+                    width_5char:
+                        filter: function() { return (feature.shield_text.length === 5) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[32px,21px]],[13,[40px,21px]],[15,[43px,23px]]]
+
                 US-NY:
                     # Match New York state highways: `US:NY`
                     filter: |
@@ -3098,7 +3149,6 @@ layers:
                                 /^US:MN$/.test(feature.network) ||
                                 /^US:MO$/.test(feature.network) ||
                                 /^US:NC$/.test(feature.network) ||
-                                /^US:MI$/.test(feature.network) ||
                                 /^US:ND$/.test(feature.network) ||
                                 /^US:NE$/.test(feature.network) ||
                                 /^US:NH$/.test(feature.network) ||
