--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -2936,6 +2936,57 @@ layers:
                             mapzen_icon_library:
                                 size: [[6,[32px,21px]],[13,[40px,21px]],[15,[43px,23px]]]
 
+                US-MN:
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:MN$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
+                            #priority: 48
+                            text:
+                                offset: [0px, 1px]
+
+                US-MO:
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:MO$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
+                            #priority: 48
+                            text:
+                                offset: [0px, -1px]
+                    width_1char:
+                        filter: function() { return (feature.shield_text.length === 1) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[18px,18px]],[13,[19px,19px]],[15,[21px,21px]]]
+                    width_2char:
+                        filter: function() { return (feature.shield_text.length === 2) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[21px,18px]],[13,[23px,19px]],[15,[25px,21px]]]
+                    width_3char:
+                        filter: function() { return (feature.shield_text.length === 3) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[27px,18px]],[13,[28px,19px]],[15,[30px,21px]]]
+                    width_4char:
+                        filter: function() { return (feature.shield_text.length === 4) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[30px,18px]],[13,[32px,19px]],[15,[35px,21px]]]
+                    width_5char:
+                        filter: function() { return (feature.shield_text.length === 5) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[33px,18px]],[13,[35px,19px]],[15,[37px,21px]]]
+
                 US-NY:
                     # Match New York state highways: `US:NY`
                     filter: |
